<resources>
    <string name="appname">Covid19 live status</string>
    <string name="google_map_api_key">AIzaSyDI7RemD0q2RryQ9cflNe8BWWQ40zRY3DQ</string>
    <string name="about">Covid19 Information App</string>
    <string name="location">Your location</string>
    <string name="india">India Status</string>
    <string name="ind">India</string>
    <string name="home">Go Home</string>
    <string name="get">Get Status</string>
    <string name="me">Developed By Rudransh Gupta</string>
    <string name="enter_loc">Enter your location</string>
    <string name="details">Your Location Details</string>
    <string name="indian">India Current Status</string>
    <string name="sub">Postal Code:</string>
    <string name="district">  District</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered:</string>
    <string name="Deceased">Deceased:</string>
    <string name="A">N.A.</string>
    <string name="B">N.A.</string>
    <string name="C">N.A.</string>
    <string name="D">N.A.</string>
    <string name="following">Following are the Reports in your District :</string>
    <string name="c">Country:</string>
    <string name="s">State</string>
    <string name="d">District</string>
    <string name="title_activity_country">country</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>